# icon-maker-cli

./: Cargo.toml  README.md  build.sh
skills/icon-maker-cli/: SKILL.md
skills/icon-maker-cli/agents/: openai.yaml
skills/icon-maker-cli/references/: icon-maker-cli-reference.md
src/: cli.rs  config.rs  error.rs  iconset.rs  image_ops.rs  main.rs  openai.rs  prompt.rs
